<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/background">

    <!--Panel de información-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <!--Logo-->
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"

            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:src="@drawable/loge"></de.hdodenhof.circleimageview.CircleImageView>
        <!--Fin Logo-->

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/nn"
                android:layout_margin="20dp"
                android:id="@+id/txtcc">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/nn"
                android:layout_margin="20dp"
                android:id="@+id/txtuse">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/nn"
                android:layout_margin="20dp"
                android:id="@+id/txtcar">

            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/title"
                android:textSize="20sp"
                android:id="@+id/ettitle"
                android:inputType="text">

            </EditText>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/descr"
                android:textSize="20sp"
                android:id="@+id/etdescrip"
                android:inputType="text">

            </EditText>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/comen"
                android:textSize="20sp"
                android:id="@+id/etcomen"
                android:inputType="text">

            </EditText>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/color"
                android:textSize="20sp"
                android:id="@+id/etcolor"
                android:inputType="text">

            </EditText>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/Green"
                android:hint="@string/insert"
                android:id="@+id/btnInsertar"
                android:layout_margin="10dp">

            </Button>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/Green"
                android:hint="@string/clear"
                android:id="@+id/btnLimpiar"
                android:layout_margin="10dp">

            </Button>

        </LinearLayout>

    </LinearLayout>
    <!--Fin Panel de información-->











    <!--Fin Panel de inserción-->


</LinearLayout>