<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp">

            <ImageView
                android:id="@+id/iconoImageView"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:src="@drawable/caballero"
                android:layout_alignParentLeft="true">

            </ImageView>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/iconoImageView"
                android:layout_marginLeft="4dp"
                android:layout_toRightOf="@+id/iconoImageView">

                <TextView
                    android:id="@+id/nameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/titulo"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/comenTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/comentario"
                    android:textSize="18sp">

                </TextView>

            </LinearLayout>


            <TextView
                android:id="@+id/statusTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="6dp"
                android:text="@string/activo"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">

            </TextView>

        </RelativeLayout>

    </LinearLayout>



</androidx.cardview.widget.CardView>